--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,11 @@
             <version>1.0-alpha2</version>
         </dependency>
         <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.15</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-core</artifactId>
             <version>2.0.0</version>
